syntax = "proto3";

option go_package = "github.com/tnynlabs/wyrm-tunnel/pkg/manager";

package wyrm.tunnel;

import "google/protobuf/empty.proto";

service TunnelManager {
    rpc RevokeDevice(DeviceInfo) returns (google.protobuf.Empty) {}
    rpc InvokeDevice(InvokeRequest) returns (InvokeResponse) {}
}

message DeviceInfo {
    int64 id = 1;
}

message DeviceRequest {
    string pattern = 1; 
    string data = 2;
}

message DeviceResponse {
    string data = 1;
}

message InvokeRequest {
    DeviceInfo device_info = 1;
    DeviceRequest device_request = 2;
}

message InvokeResponse {
    DeviceInfo device_info = 1;
    DeviceResponse device_response = 2;
}
